use grpc call ReplyReview
